[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["kostya <llampav42@gmail.com>", "Leon Minasyan <ierehon1905@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
